--- a/code/plotting/milisav_str_nulls_plotting.yml
+++ b/code/plotting/milisav_str_nulls_plotting.yml
@@ -3,10 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
   - alabaster=0.7.12=py_0
   - alsa-lib=1.2.6.1=h7f98852_0
+  - appdirs=1.4.4=pyh9f0ad1d_0
   - arrow=1.2.2=pyhd8ed1ab_0
   - astroid=2.12.5=py39hf3d152e_0
   - atomicwrites=1.4.1=pyhd8ed1ab_0
@@ -19,13 +18,14 @@ dependencies:
   - beautifulsoup4=4.11.1=pyha770c72_0
   - binaryornot=0.4.4=py_1
   - black=22.6.0=py39hf3d152e_2
+  - blas=1.0=openblas
   - bleach=5.0.1=pyhd8ed1ab_0
   - brotli=1.0.9=h166bdaf_7
   - brotli-bin=1.0.9=h166bdaf_7
   - brotlipy=0.7.0=py39hb9d737c_1004
   - bzip2=1.0.8=h7f98852_4
-  - ca-certificates=2022.6.15=ha878542_0
-  - certifi=2022.6.15=pyhd8ed1ab_1
+  - ca-certificates=2022.9.24=ha878542_0
+  - certifi=2022.9.24=pyhd8ed1ab_0
   - cffi=1.15.1=py39he91dace_0
   - chardet=5.0.0=py39hf3d152e_0
   - charset-normalizer=2.1.1=pyhd8ed1ab_0
@@ -33,7 +33,6 @@ dependencies:
   - cloudpickle=2.1.0=pyhd8ed1ab_0
   - colorama=0.4.5=pyhd8ed1ab_0
   - cookiecutter=2.1.1=pyh6c4a22f_0
-  - cryptography=37.0.1=py39h9ce1e76_0
   - cycler=0.11.0=pyhd8ed1ab_0
   - dbus=1.13.6=h5008d03_3
   - debugpy=1.6.3=py39h5a03fae_0
@@ -85,7 +84,6 @@ dependencies:
   - keyring=23.8.2=py39hf3d152e_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.4=py39hf939315_0
-  - krb5=1.19.3=h08a2579_0
   - lazy-object-proxy=1.7.1=py39hb9d737c_1
   - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
@@ -98,22 +96,18 @@ dependencies:
   - libclang=13.0.1=default_hc23dcda_0
   - libdeflate=1.13=h166bdaf_0
   - libedit=3.1.20191231=he28a2e2_2
-  - libevent=2.1.10=h28343ad_4
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=12.1.0=h8d9b700_16
   - libgfortran-ng=12.1.0=h69a702a_16
   - libgfortran5=12.1.0=hdcd56e2_16
   - libglib=2.72.1=h2d90d5f_0
   - libgomp=12.1.0=h8d9b700_16
   - libiconv=1.16=h516909a_0
   - liblapack=3.9.0=16_linux64_openblas
-  - libllvm13=13.0.1=hf817b99_2
   - libnsl=2.0.0=h7f98852_0
   - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.21=pthreads_h78a6416_1
   - libopus=1.3.1=h7f98852_1
   - libpng=1.6.37=h753d276_4
-  - libpq=14.5=he2d8382_0
   - libsodium=1.0.18=h36c2ea0_1
   - libspatialindex=1.9.3=h9c3ff4c_4
   - libsqlite=3.39.2=h753d276_1
@@ -136,8 +130,6 @@ dependencies:
   - mistune=2.0.4=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mypy_extensions=0.4.3=py39hf3d152e_5
-  - mysql-common=8.0.30=h26416b9_0
-  - mysql-libs=8.0.30=hbc51c84_0
   - nbclient=0.6.7=pyhd8ed1ab_0
   - nbconvert=7.0.0=pyhd8ed1ab_0
   - nbconvert-core=7.0.0=pyhd8ed1ab_0
@@ -149,7 +141,6 @@ dependencies:
   - nss=3.78=h2350873_0
   - numpydoc=1.4.0=pyhd8ed1ab_1
   - openjpeg=2.5.0=h7d73246_1
-  - openssl=3.0.5=h166bdaf_1
   - packaging=21.3=pyhd8ed1ab_0
   - pandas=1.4.3=py39h1832856_0
   - pandoc=2.19.2=ha770c72_0
@@ -165,6 +156,7 @@ dependencies:
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
   - platformdirs=2.5.2=pyhd8ed1ab_1
   - pluggy=1.0.0=py39hf3d152e_3
+  - pooch=1.6.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.30=pyha770c72_0
   - psutil=5.9.1=py39hb9d737c_0
   - pthread-stubs=0.4=h36c2ea0_1001
@@ -176,16 +168,10 @@ dependencies:
   - pygments=2.13.0=pyhd8ed1ab_0
   - pylint=2.15.0=pyhd8ed1ab_0
   - pyls-spyder=0.4.0=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
+  - pyopenssl=22.1.0=pyhd8ed1ab_0
   - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyqt=5.12.3=py39hf3d152e_7
-  - pyqt-impl=5.12.3=py39h0fcd23e_7
-  - pyqt5-sip=4.19.18=py39he80948d_7
-  - pyqtchart=5.12=py39h0fcd23e_7
-  - pyqtwebengine=5.12.1=py39h0fcd23e_7
   - pyrsistent=0.18.1=py39hb9d737c_1
   - pysocks=1.7.1=py39hf3d152e_5
-  - python=3.9.13=h2660328_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-fastjsonschema=2.16.1=pyhd8ed1ab_0
   - python-lsp-black=1.2.1=pyhd8ed1ab_0
@@ -200,17 +186,12 @@ dependencies:
   - pyzmq=23.2.1=py39headdf64_0
   - qdarkstyle=3.0.3=pyhd8ed1ab_0
   - qstylizer=0.2.1=pyhd8ed1ab_0
-  - qt=5.12.9=h1304e3e_6
-  - qtawesome=1.1.1=pyhd8ed1ab_0
-  - qtconsole=5.3.2=pyhd8ed1ab_0
-  - qtconsole-base=5.3.2=pyha770c72_0
-  - qtpy=2.2.0=pyhd8ed1ab_0
   - readline=8.1.2=h0f457ee_0
-  - requests=2.28.1=pyhd8ed1ab_0
+  - requests=2.28.1=pyhd8ed1ab_1
   - rope=1.3.0=pyhd8ed1ab_0
   - rtree=1.0.0=py39hb102c33_1
   - scikit-learn=1.1.2=py39he5e8d7e_0
-  - scipy=1.9.0=py39h8ba3f38_0
+  - scipy=1.10.0=py39h32ae08f_1
   - seaborn=0.11.2=hd8ed1ab_0
   - seaborn-base=0.11.2=pyhd8ed1ab_0
   - secretstorage=3.3.3=py39hf3d152e_0
@@ -226,8 +207,6 @@ dependencies:
   - sphinxcontrib-jsmath=1.0.1=py_0
   - sphinxcontrib-qthelp=1.0.3=py_0
   - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_2
-  - spyder=5.3.2=py39hf3d152e_0
-  - spyder-kernels=2.3.3=py39hf3d152e_0
   - sqlite=3.39.2=h4ff8645_1
   - statsmodels=0.13.2=py39hd257fcd_0
   - text-unidecode=1.3=py_0
@@ -281,3 +260,4 @@ dependencies:
     - tabulate==0.9.0
     - tqdm==4.64.0
     - xarray==2023.11.0
+
